# attovm

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  app.properties  localizescript.sh
doc/: 2opm.sty  SPEC.de  asm-docs.de.tex  asm-docs.tex  overview.de.tex  overview.tex
examples/: demo.s  eratosthenes.atl  heapflow.atl
src/: CMakeLists.txt  Makefile  address-store-disttest.c  address-store.c  address-store.h  analysis.h  assembler-buffer-test.c  assembler-buffer.c  assembler-buffer.h  assembler-test.c  ast-analyses.c  ast-analyses.h  ast.c  ast.h  ast.template.h  atl.c  av-dump.c  backend-test.c  baseline-backend.c  baseline-backend.h  bitvector.c  bitvector.h  builtins.c  chash.c  chash.h  class-disttest.c  class.c  class.h  compiler-options.h  containers-test.c  control-flow-graph.c  control-flow-graph.h  cstack.c  cstack.h  data-flow-definite-assignments.c  data-flow-out-of-bounds-elimination.c  data-flow-precise-types.c  data-flow-reaching-definitions.c  data-flow.c  data-flow.h  (+41 more)
src/2opm/: asm-builtins.c  asm-debug.c  asm-errors.c  asm-labels.c  asm-lexer.l  asm-memory.c  asm-parse.c  asm.c  asm.h
test/: TESTS  allcmp.av  allcmp.names  allcmp.parse  array-size.av  array-size.names  array-size.parse  array-size.symtab  array-updates.av  array-updates.names  array-updates.parse  array-updates.symtab  class-init.av  class-init.names  class-init.parse  class-init.symtab  complicatedclass.av  complicatedclass.names  complicatedclass.parse  complicatedclass.semantic  complicatedclass.symtab  cond.av  cond.names  cond.parse  const-add.av  const-add.names  const-add.parse  const-add.symtab  do_while.av  do_while.names  do_while.parse  do_while_once.av  do_while_once.names  do_while_once.parse  dynamic-dispatch.av  dynamic-dispatch.names  dynamic-dispatch.parse  dynamic-dispatch.symtab  factorial.av  factorial.names  (+67 more)
